# Memento

./: .gitmodules  Personal_plans.md  README.md
.github/workflows/: frontend-dev.yml  mirror.yml  mood-tracker-dev.yml  node-srs-dev.yml  quote-generator-dev.yml  sra-dev.yml  translator-dev.yml
Diploma Document/: .gitignore  bibliography.bib  chapterA.tex  introduction.tex  main.tex  titlepage2.tex
Project/frontend-pwa/: .env.local  .gitignore  next.config.js  package-lock.json  package.json
Project/frontend-pwa/components/: Navbar.tsx  RecordCard.tsx  Stopwatch.tsx  Toaster.tsx
Project/frontend-pwa/hooks/: useRecorder.ts
Project/frontend-pwa/icons/: ArrowDownIcon.tsx  ArrowIcon.tsx  BrightnessIcon.tsx  CheckboxCheckedIcon.tsx  CheckboxIcon.tsx  CloseIcon.tsx  DeleteIcon.tsx  DoneIcon.tsx  EditIcon.tsx  EditRecordIcon.tsx  ExclamationIcon.tsx  FacebookIcon.tsx  GoogleIcon.tsx  GratitudeIcon.tsx  HomeIcon.tsx  LeaveIcon.tsx  LeavesIcon.tsx  MicroIcon.tsx  PlayIcon.tsx  PlusIcon.tsx  ProfileIcon.tsx  RecordWaveIcon.tsx  SearchIcon.tsx  SettingsIcon.tsx  ShareIcon.tsx  SlySmileIcon.tsx  SmileIcon.tsx  SmilingSmileIcon.tsx  StatisticsIcon.tsx  StopIcon.tsx  SupportIcon.tsx  TextIcon.tsx  ThreeDotsIcon.tsx  TranslateIcon.tsx  TrashIcon.tsx  UploadIcon.tsx  WaveIcon.tsx  WearySmileIcon.tsx  WritingIcon.tsx  index.ts
Project/frontend-pwa/pages/: _app.tsx  _document.tsx  checkin.tsx  edit.tsx  gratitude.tsx  index.tsx  (+9 more)
Project/ml-backend/: Dockerfile  main.py  models.py  pyproject.toml  requirements.txt  settings.py
Project/mood-tracker/: Dockerfile  configs.py  encoder.py  get_model.py  main.py  models.py  mood_tracker_training.ipynb  net.py  pyproject.toml  requirements.txt
Project/mood-tracker/weights/: model.pt
Project/node-srs-backend/: index.js  package-lock.json  package.json
Project/quote-generator/: Dockerfile  main.py  models.py  pyproject.toml  requirements.txt
Project/translator-backend/: Dockerfile  heroku.yml  main.py  models.py  pyproject.toml  requirements.txt  script.sh  settings.py
Reports/: PreFinalReport.md  README.md  WEEK10.md  WEEK11.md  WEEK12.md  WEEK13.md  WEEK14.md  WEEK15.md  WEEK3.md  WEEK4.md  WEEK5.md  WEEK6.md  WEEK7.md  WEEK8.md  WEEK9.md
(+23 files in other folders)
