[tool.poetry]
name = "mood-tracker"
version = "0.1.0"
description = ""
authors = ["Madiyar Mukushev <madiyar2000@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
torch = "^1.11.0"
torchvision = "^0.12.0"
torchaudio = "^0.11.0"
fastapi = "^0.75.2"
uvicorn = {extras = ["standard"], version = "^0.17.6"}
gensim = "^4.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
